# Snowfox

./: CMakeLists.txt  Cargo.toml  README.md  vcpkg.json
Snowfox/: CMakeLists.txt  Connection.cpp  Connection.hpp  ControllerValues.hpp  Snowfox.cpp  Snowfox.hpp
src/: camera.rs  main.rs
